# TopPaperStyleGuard

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-skill.md  ethics.md  method.md
examples/corpus/: paper-a.txt  paper-b.txt
examples/drafts/: introduction.md  revised-introduction.md
skills/top-paper-learn/: SKILL.md
skills/top-paper-learn/agents/: openai.yaml
skills/top-paper-learn/references/: profile.md
skills/toppaperstyleguard/: SKILL.md
skills/toppaperstyleguard/agents/: openai.yaml
skills/toppaperstyleguard/references/: profile.md
src/toppaperlearn/: __init__.py  audit.py  cli.py  guard.py  moves.py  profile.py  skillgen.py
src/toppaperstyleguard/: __init__.py  audit.py  cli.py  guard.py  profile.py  skillgen.py  text.py
tests/: test_cli.py  test_profile_guard_audit.py
