[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "toppaperstyleguard"
version = "0.1.0"
description = "Learn top-journal rhetorical patterns without copying source text."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  {name = "TopPaperStyleGuard contributors"},
]
keywords = [
  "academic-writing",
  "research-writing",
  "agent-skill",
  "style-guide",
  "similarity-guard",
  "plagiarism-prevention",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.scripts]
tpsg = "toppaperstyleguard.cli:main"
toppaperstyleguard = "toppaperstyleguard.cli:main"

[project.urls]
Homepage = "https://github.com/a825641097/TopPaperStyleGuard"
Repository = "https://github.com/a825641097/TopPaperStyleGuard"
Issues = "https://github.com/a825641097/TopPaperStyleGuard/issues"
Documentation = "https://github.com/a825641097/TopPaperStyleGuard#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
